# feinschliff

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  NOTICE.md  README.md  SECURITY.md  STATS.md  constraints.txt  feinblick.toml  pyproject.toml
_feinschliff/: CHANGELOG.md  NOTICE.md  README.md  pyproject.toml
_feinschliff/.debug/: reachability.py
_feinschliff/cli/: __init__.py  __main__.py  brand.py  build.py  decompile.py  main.py  verify.py
_feinschliff/compounds/: agenda-item.dsl
_feinschliff/layouts/: 2x2-matrix.slide.dsl  components-showcase.slide.dsl  end.slide.dsl  excalidraw-diagram.slide.dsl  funnel.slide.dsl  photo-grid.slide.dsl  photo-strip-four.slide.dsl  risk-register.slide.dsl  stacked-bar.slide.dsl  venn.slide.dsl
_feinschliff/lib/: __init__.py  content_validator.py  layout_budget.py  layout_validator.py  pipeline_log.py
_feinschliff/references/: compounds.md
_feinschliff/scripts/: brand_compare_pdf.py  brand_decompile_all.py  brand_verify_loop.py  build_brand_atlas_overview.py  render_brand_atlas.py  render_side_by_side.py
_feinschliff/tests/: test_book_pdf.py  test_cli_brand_inspect.py  test_cli_build_content_lint.py  test_cli_deck_apply_fixes.py  test_cli_deck_plan_skeleton.py  test_cli_deck_storyline.py  test_cli_picture_query.py  test_deck_compose.py  test_design_md.py  test_diagram_validators_virtual_scale.py  test_diagram_wireframe.py  test_diagrams_corpus.py  test_dsl_ast.py  test_dsl_emit_document.py  test_dsl_if_guard.py  test_dsl_primitive_diagrams.py  test_dsl_smoke.py  test_dsl_tokens.py  test_dsl_tokens_schema.py  test_examples_refurbish.py  test_excalidraw_extensions.py  test_excalidraw_render.py  test_layout_excalidraw_diagram.py  test_layout_excalidraw_diagram_aspect.py  test_layout_picker.py  test_layout_picker_diagrams.py  test_layout_picker_negative.py  test_layout_svg_infographic.py  test_layout_v_model.py  test_layouts_lint.py  test_pipeline_compile_slide.py  test_refurbish_extract_raster.py  test_refurbish_extract_vector.py  test_refurbish_ir.py  test_speaker_notes.py  test_verify_cache.py  test_verify_chrome.py  test_verify_deck_non_mece.py  test_verify_deck_thumbnails_grid.py  test_verify_diagram_defects.py
feinbild/: README.md  build-wheels.sh  pyproject.toml  wheels-manifest.json
feinbild/.claude-plugin/: plugin.json
feinbild/commands/: excalidraw.md  imagine.md  svg.md
feinbild/tests/: test_cli.py  test_cli_errors.py  test_diagrams_cli.py  test_diagrams_corpus.py  test_images.py  test_realworld_render.py  test_verify.py
feinblick/: README.md  build-wheels.sh  pyproject.toml  ruff.toml
feinblick/.claude-plugin/: plugin.json
feinblick/commands/: audit.md  check.md  health.md
feinblick/tests/: test_adapter_agnix.py  test_adapter_cytoscnpy.py  test_adapter_tach.py  test_attribution.py  test_baseline.py  test_cli.py  test_config.py  test_integration.py  test_model.py  test_orchestrator.py  test_report.py  test_rules_health.py  test_rules_normalize.py  test_rules_repo_discipline.py  test_rules_run.py  test_rules_skills.py  test_runner.py  test_skillgen.py
feinklang/: README.md  build-wheels.sh  pyproject.toml  wheels-manifest.json
feinklang/tests/: test_cli_errors.py
feinschliff/: CHANGELOG.md  CLAUDE.md  NOTICE.md  README.md  build-wheels.sh  pyproject.toml  wheels-manifest.json
feinschliff-builder/: README.md  build-wheels.sh  pyproject.toml  wheels-manifest.json
feinschliff-builder/.claude-plugin/: plugin.json
feinschliff-builder/docs/: improvement-and-verification-loops.md
feinschliff-builder/feinschliff_builder/: __init__.py
feinschliff-builder/scripts/: brand_before_after_pdf.py  brand_compare_pdf.py  brand_decompile_all.py  brand_plateau.py  brand_port_curation.py  brand_source_extract.py  brand_verify_loop.py  brand_visual_diff.py  build_brand_atlas_overview.py  build_brand_gallery_site.py  dsl_golden_compare.py  pptx_flatten_inherited.py  render_brand_annotated.py  render_brand_atlas.py  render_brand_preview.py  render_side_by_side.py  render_v2_goldens.py  slotify_layouts.py  upload_brand_previews_to_r2.py
feinschliff-builder/tests/: conftest.py  test_autofix_suggestions.py  test_brand_decompile_all.py  test_brand_visual_diff_floor.py  test_char_capacity.py  test_cli_brand_inspect.py  test_cli_deck_apply_fixes.py  test_cli_deck_notes_threading.py  test_cli_deck_plan_skeleton.py  test_cli_ghost_deck.py  test_cli_title_lint.py  test_cli_verify.py  test_cli_verify_quality.py  test_clip_text_to_images.py  test_decompile_bent_connector.py  test_decompile_bg_image.py  test_decompile_clr_map.py  test_decompile_placeholder_idx_match.py  test_decompile_preset_geometry.py  test_decompile_soft_breaks.py  test_decompile_text_room.py  test_decompile_title_inheritance.py  test_diagrams_structural_validator.py  test_eval_grader.py  test_eval_slide_dsl.py  test_flatten_inherited.py  test_layout_profile_gen.py  test_native_slotify_cleanup.py  test_refurbish_brand_enforce.py  test_refurbish_emit_excalidraw.py  test_refurbish_emit_svg.py  test_refurbish_extract_raster.py  test_refurbish_extract_vector.py  test_refurbish_ir.py  test_refurbish_polish_cli.py  test_render_brand_atlas_cache.py  test_render_brand_atlas_paths.py  test_slot_warnings.py  test_slotify.py  test_slotify_autoshrink.py  (+17 more)
feinschliff/.claude-plugin/: plugin.json
feinschliff/cli/: brand.py  build.py  compile.py  deck.py  decompile.py  main.py  ship.py  verify_diagram.py  verify_quality.py
feinschliff/commands/: deck.md  excalidraw.md  imagine.md  record.md  svg.md  tts.md
feinschliff/compounds/: card-q.dsl  card.dsl  kpi-cell.dsl
feinschliff/docs/: architecture.md  brand-pack-contract.md  brand-system.md  diagrams.md  dsl-grammar.md  port-your-brand.md  quality-contract.md
feinschliff/examples/: README.md
feinschliff/feinschliff/: __init__.py  brand_discovery.py  content_validator.py  defects.py  diagnostics.py  env.py  pipeline.py  (+8 more)
feinschmiede/: .gitignore  README.md  pyproject.toml
feinschnitt/: README.md  build-wheels.sh  pyproject.toml  wheels-manifest.json
(+1144 files in other folders)
