[project]
name = "feinschliff"
version = "0.3.0"
description = "Feinschliff core library and CLI — DSL pipeline + brand pack tooling."
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=0.6.23",
    "lxml>=4.9",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "pyphen>=0.17.2",
    "pillow>=10",
    "cairosvg>=2.7",
    "rough>=1.6",
]

[project.scripts]
feinschliff = "cli.main:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "imagehash>=4.3.2",
    "img2pdf>=0.4",
    "numpy>=1.26",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "scikit-image>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
# Tests use `pytest.importorskip` + then real imports; scripts must inject
# repo root onto sys.path before importing `lib.*`. Both are legitimate E402.
"tests/**" = ["E402"]
"scripts/**" = ["E402"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "cli*"]
