[project]
name = "feinbild"
version = "0.1.0"
description = "Image / 2D for Claude Code — AI images, SVG, and Excalidraw diagrams via the `feinbild` CLI."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mike Mueller", email = "mike@objektarium.de" }]
dependencies = [
    "feinschmiede",
    "requests>=2.31",
]

[project.scripts]
feinbild = "feinbild.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["feinbild*"]

[tool.uv.sources]
feinschmiede = { workspace = true }
