[project]
name = "feinbild"
version = "0.0.1"
description = "Image / 2D for Claude Code — AI images, SVG, and Excalidraw diagrams via the `feinbild` CLI."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mike Mueller", email = "mike@objektarium.de" }]
dependencies = [
    "feinschmiede",
    "requests>=2.31",
]

[project.scripts]
feinbild = "feinbild.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["feinbild*"]

[tool.setuptools.package-data]
# Bundled brand pack (the default `feinschliff` look) must ship inside the wheel
# so `feinbild` resolves its brand on a direct/PyPI install, not only via the
# bin/ launcher's FEINSCHLIFF_BRAND_PATH export. cli._register_bundled_brands()
# locates this dir at runtime.
feinbild = [
    "brands/*/*.json",
    "brands/*/*.md",
    "brands/*/assets/*",
    "brands/*/compounds/*",
    "brands/*/claude-design/*",
]

[tool.uv.sources]
feinschmiede = { workspace = true }
