[project]
name = "feinklang"
version = "0.3.0"
description = "ElevenLabs text-to-speech CLI for the feinschmiede plugin family."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mike Mueller", email = "mike@objektarium.de" }]
dependencies = [
    "requests>=2.31",
]

[project.scripts]
feinklang = "feinklang.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["feinklang*"]
