[project]
name = "feinschliff-builder"
version = "0.2.0"
description = "Feinschliff brand-pack authoring toolkit — compile HTML to DSL, verify quality, decompile PPTX, iterate brand packs."
requires-python = ">=3.11"
dependencies = [
    "feinschliff",
    "feinschmiede",
    "python-pptx>=0.6.23",
    "lxml>=4.9",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "pillow>=10",
    "anthropic>=0.40",
]

[project.scripts]
feinschliff-builder = "feinschliff_builder.cli.main:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.uv.sources]
feinschliff = { workspace = true }
feinschmiede = { workspace = true }

[dependency-groups]
dev = [
    "imagehash>=4.3.2",
    "img2pdf>=0.4",
    "numpy>=1.26",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "scikit-image>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"scripts/**" = ["E402"]

[tool.setuptools.packages.find]
where = ["."]
include = ["feinschliff_builder*"]
