[project]
name = "feinschliff"
version = "0.2.0"
description = "Feinschliff core library and CLI — DSL pipeline + brand pack tooling."
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=1.0.2",
    "lxml>=6.1.1",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "pyphen>=0.17.2",
    "pillow>=10",
    "cairosvg>=2.9.0",
    "rough>=1.6",
]

[project.scripts]
feinschliff = "feinschliff.cli.main:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"scripts/**" = ["E402"]

[tool.setuptools.packages.find]
where = ["."]
include = ["feinschliff*"]
