[project]
name = "feinschliff"
version = "0.3.0"
description = "Feinschliff core library and CLI — DSL pipeline + brand pack tooling."
requires-python = ">=3.11"
dependencies = [
    "feinschmiede",
    "python-pptx>=1.0.2",
    "lxml>=6.1.1",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "pyphen>=0.17.2",
    "pillow>=10",
    "cairosvg>=2.9.0",
    "rough>=1.6",
]

[project.scripts]
feinschliff = "feinschliff.cli.main:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.uv.sources]
feinschmiede = { workspace = true }
feinschliff-builder = { workspace = true }

[dependency-groups]
# feinschliff-builder depends on feinschliff, so it cannot be a runtime
# dependency (that would be a cycle). It lives in the dev group instead, which
# makes the optional builder-gated CLI surfaces — `deck verify-static`,
# `deck build --strict-static` / `--autofix`, notes-budget / storyline /
# claim-evidence — available in the working venv without affecting the
# published package's dependency graph.
dev = [
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "feinschliff-builder",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"scripts/**" = ["E402"]
# Vendored, self-contained media-skill CLI scripts (copied verbatim from
# agentic-toolkit). They do __future__/sys.path setup before imports, so E402
# applies here for the same reason it does to scripts/**.
"skills/*/scripts/**" = ["E402"]

[tool.setuptools.packages.find]
where = ["."]
include = ["feinschliff*"]
