[project]
name = "feinschmiede"
version = "0.0.1"
description = "feinschmiede — shared engine for the feinschmiede media family: brand/look system + diagram engine + DSL AST."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mike Mueller", email = "mike@objektarium.de" }]
dependencies = [
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "cairosvg>=2.9.0",
    "rough>=1.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["feinschmiede*"]

[tool.setuptools.package-data]
# Non-.py engine data read at runtime (brand token-schema validation + bundled
# compound DSL snippets). Without this the wheel ships code but not the data the
# diagram/brand path loads, breaking any wheel-installed consumer (feinbild).
feinschmiede = ["schemas/*.json", "compounds/*.dsl", "diagrams/playwright_assets/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
